- 폰트 적용하기 - 리스트 없을 때 UI 처리 추가(포인트 리스트, 공지사항, 쿠폰,  차량관리, 주소 검색)

--- a/app/src/main/res/layout/actionbar_info_layout.xml
+++ b/app/src/main/res/layout/actionbar_info_layout.xml
@@ -26,6 +26,7 @@
     </LinearLayout>
     <TextView
         android:id="@+id/title_activity"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
