--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -76,6 +76,7 @@
 
     <TextView
         android:id="@+id/description_activity"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -115,6 +116,7 @@
 
         <EditText
             android:id="@+id/new_password1"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="216dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
@@ -125,7 +127,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:nextFocusDown="@+id/new_password2"
-            android:inputType="textPassword"
+            android:inputType="textVisiblePassword"
             android:imeOptions="actionNext"/>
     </LinearLayout>
 
@@ -251,13 +253,14 @@
 
         <EditText
             android:id="@+id/new_password2"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="216dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:ems="10"
             android:hint="@string/hint_new_password2"
-            android:inputType="textPassword"
+            android:inputType="textVisiblePassword"
             android:imeOptions="actionDone"
             android:background="@null"
             android:textColor="#3E3E3E"
@@ -266,6 +269,7 @@
 
     <Button
         android:id="@+id/btnPassword"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="280dp"
         android:layout_height="52dp"
         android:layout_marginStart="40dp"
