--- a/app/src/main/res/layout/activity_reservation_address.xml
+++ b/app/src/main/res/layout/activity_reservation_address.xml
@@ -27,6 +27,7 @@
 
         <EditText
             android:id="@+id/searchAddressKeyword"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="0dp"
             android:layout_height="18dp"
             android:layout_marginStart="30dp"
@@ -123,6 +124,7 @@
             android:src="@drawable/empty_use"/>
 
         <TextView
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="43dp"
