--- a/app/src/main/res/layout/activity_my_profile_settings.xml
+++ b/app/src/main/res/layout/activity_my_profile_settings.xml
@@ -28,6 +28,7 @@
 
             <TextView
                 android:id="@+id/user_name"
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -38,6 +39,7 @@
 
             <TextView
                 android:id="@+id/user_mobile"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -84,6 +86,7 @@
 
             <TextView
                 android:id="@+id/textView1"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -115,6 +118,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -181,6 +185,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -213,6 +218,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -245,6 +251,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
