--- a/app/src/main/res/layout/activity_myinfo_detail.xml
+++ b/app/src/main/res/layout/activity_myinfo_detail.xml
@@ -34,6 +34,7 @@
 
         <TextView
             android:id="@+id/myinfo_title_activity"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal"
@@ -59,6 +60,7 @@
 
         <TextView
             android:id="@+id/myinfo_type_1"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
@@ -101,6 +103,7 @@
 
                 <TextView
                     android:id="@+id/myinfo_user_title"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
@@ -111,6 +114,7 @@
 
                 <TextView
                     android:id="@+id/myinfo_user_name"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
@@ -151,6 +155,7 @@
 
                     <TextView
                         android:id="@+id/myinfo_mobile_title"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
@@ -161,6 +166,7 @@
 
                     <TextView
                         android:id="@+id/user_mobile_number"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
@@ -202,6 +208,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
@@ -211,6 +218,7 @@
                         android:textSize="15sp" />
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
@@ -229,6 +237,7 @@
 
                     <TextView
                         android:id="@+id/myinfo_btnNext"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="wrap_content"
                         android:layout_height="24dp"
                         android:layout_marginRight="0dp"
