--- a/app/src/main/res/layout/activity_point_history.xml
+++ b/app/src/main/res/layout/activity_point_history.xml
@@ -29,6 +29,7 @@
 
         <TextView
             android:id="@+id/friend_type_1"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
@@ -42,6 +43,7 @@
 
         <TextView
             android:id="@+id/friend_type_1_count"
+            android:fontFamily="@font/nanumsquareextrabold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
@@ -66,6 +68,7 @@
 
         <TextView
             android:id="@+id/friend_type_2"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
@@ -79,6 +82,7 @@
 
         <TextView
             android:id="@+id/friend_type_2_count"
+            android:fontFamily="@font/nanumsquareextrabold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
@@ -108,6 +112,7 @@
 
         <TextView
             android:id="@+id/total_point_title"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
@@ -122,13 +127,13 @@
 
         <TextView
             android:id="@+id/total_point"
+            android:fontFamily="@font/nanumsquareextrabold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:text=""
             android:textColor="#3e3e3e"
             android:textSize="15sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/total_point_title"
@@ -148,6 +153,7 @@
 
         <TextView
             android:id="@+id/column1"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#3e3e3e"
@@ -160,6 +166,7 @@
             tools:text="@string/point_history_list_column_1" />
         <TextView
             android:id="@+id/column2"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#3e3e3e"
@@ -172,6 +179,7 @@
             tools:text="@string/point_history_list_column_2" />
         <TextView
             android:id="@+id/column3"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#3e3e3e"
@@ -184,6 +192,7 @@
             tools:text="@string/point_history_list_column_3" />
         <TextView
             android:id="@+id/column4"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#3e3e3e"
@@ -222,6 +231,7 @@
         android:visibility="gone">
 
         <TextView
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="43dp"
