--- a/app/src/main/res/layout/activity_reservation_calendar.xml
+++ b/app/src/main/res/layout/activity_reservation_calendar.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="32dp"
+        android:textSize="14.5sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +41,7 @@
 
         <Button
             android:id="@+id/btnNext"
+            android:fontFamily="@font/nanumsquarebold"
             android:layout_width="0dp"
             android:layout_height="52dp"
             android:layout_marginStart="24dp"
