--- a/app/src/main/res/layout/activity_reservation_main.xml
+++ b/app/src/main/res/layout/activity_reservation_main.xml
@@ -46,13 +46,13 @@
 
             <TextView
                 android:id="@+id/branch_name"
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
                 android:textColor="#3e3e3e"
-                android:textStyle="bold"
                 android:text="@string/reservation_agent_dummy"
                 tools:text="관악구 1호점"
                 app:layout_constraintStart_toEndOf="@+id/agent_photo"
@@ -60,6 +60,7 @@
 
             <TextView
                 android:id="@+id/reserve_date"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
@@ -74,6 +75,7 @@
 
             <TextView
                 android:id="@+id/reserve_time"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
@@ -100,12 +102,12 @@
 
             <TextView
                 android:id="@+id/car_info_title"
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:textSize="16sp"
                 android:textColor="#3e3e3e"
-                android:textStyle="bold"
                 android:text="@string/car_info_title"
                 tools:text="차량 정보"
                 app:layout_constraintStart_toStartOf="parent"
@@ -165,6 +167,7 @@
 
                 <TextView
                     android:id="@+id/car_name_str"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
@@ -178,6 +181,7 @@
 
                 <TextView
                     android:id="@+id/car_number_str"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -193,6 +197,7 @@
                 <!-- TODO : 변경하기 버튼 만들기 -->
                 <TextView
                     android:id="@+id/btnCarModify"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
@@ -228,6 +233,7 @@
 
             <TextView
                 android:id="@+id/wash_info_title"
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -261,6 +267,7 @@
                     <!-- TODO : 라디오버튼 아이콘과 간격 8dp 설정 필요 -->
                     <RadioButton
                         android:id="@+id/wash_place_button1"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:checked="true"
@@ -273,6 +280,7 @@
 
                     <RadioButton
                         android:id="@+id/wash_place_button2"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="36dp"
@@ -307,12 +315,12 @@
 
             <TextView
                 android:id="@+id/option_service_title"
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:textSize="16sp"
                 android:textColor="#3e3e3e"
-                android:textStyle="bold"
                 android:text="@string/option_service_title"
                 tools:text="부가 서비스 (옵션)"
                 app:layout_constraintStart_toStartOf="parent"
@@ -333,6 +341,7 @@
 
             <TextView
                 android:id="@+id/option_empty_view"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -350,6 +359,7 @@
 
                 <Button
                     android:id="@+id/reserve_btn"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
                     android:background="@drawable/default_button_type_1"
