--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -38,6 +38,7 @@
         </LinearLayout>
         <TextView
             android:id="@+id/myinfo_title_activity"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal"
@@ -91,6 +92,7 @@
 
                         <TextView
                             android:id="@+id/myinfo_user_title"
+                            android:fontFamily="@font/nanumsquarebold"
                             android:layout_width="match_parent"
                             android:layout_height="18dp"
                             android:layout_gravity="left|center_horizontal|center_vertical"
@@ -120,12 +122,12 @@
 
                         <TextView
                             android:layout_width="match_parent"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_height="19dp"
                             android:layout_gravity="left|center_horizontal|center_vertical"
                             android:letterSpacing="0.05"
                             android:textColor="@color/textColorPrimary"
                             android:textSize="15sp"
-                            android:textStyle="bold"
                             android:text="현재 버전" />
                     </LinearLayout>
 
@@ -139,6 +141,7 @@
 
                         <TextView
                             android:id="@+id/setting_version_info"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_width="match_parent"
                             android:layout_height="19dp"
                             android:layout_gravity="center|center_horizontal|center_vertical"
@@ -171,6 +174,7 @@
 
                         <TextView
                             android:id="@+id/setting_clause"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_width="match_parent"
                             android:layout_height="19dp"
                             android:layout_gravity="left|center_horizontal|center_vertical"
@@ -203,6 +207,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
+                            android:fontFamily="@font/nanumsquarebold"
                             android:layout_height="18dp"
                             android:layout_gravity="center|center_horizontal|center_vertical"
                             android:gravity="left"
@@ -231,6 +236,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_height="19dp"
                             android:layout_gravity="left|center_horizontal|center_vertical"
                             android:gravity="left"
@@ -242,6 +248,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_height="17dp"
                             android:layout_marginTop="8dp"
                             android:layout_gravity="left|center_horizontal|center_vertical"
@@ -293,6 +300,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_height="19dp"
                             android:layout_gravity="left|center_horizontal|center_vertical"
                             android:gravity="left"
@@ -304,6 +312,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_height="17dp"
                             android:layout_marginTop="8dp"
                             android:layout_gravity="left|center_horizontal|center_vertical"
@@ -355,6 +364,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
+                            android:fontFamily="@font/nanumsquarebold"
                             android:layout_height="19dp"
                             android:layout_gravity="center|center_horizontal|center_vertical"
                             android:gravity="left"
@@ -383,6 +393,7 @@
 
                         <TextView
                             android:id="@+id/member_logout"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_width="match_parent"
                             android:layout_height="19dp"
                             android:layout_gravity="center|center_horizontal|center_vertical"
@@ -417,6 +428,7 @@
 
                         <TextView
                             android:id="@+id/member_withdrawal"
+                            android:fontFamily="@font/nanumsquareregular"
                             android:layout_width="match_parent"
                             android:layout_height="19dp"
                             android:layout_gravity="center|center_horizontal|center_vertical"
