--- a/app/src/main/res/layout/activity_use_delete_settle.xml
+++ b/app/src/main/res/layout/activity_use_delete_settle.xml
@@ -32,6 +32,7 @@
                 android:src="@drawable/prev_image_selector" />
         </LinearLayout>
         <TextView
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal"
@@ -70,6 +71,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="match_parent"
                 android:layout_height="18dp"
                 android:layout_gravity="center"
@@ -80,6 +82,7 @@
 
             <TextView
                 android:id="@+id/settle_reserve_cancel_time"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="match_parent"
                 android:layout_height="16dp"
                 android:layout_gravity="center"
@@ -105,6 +108,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:fontFamily="@font/nanumsquarebold"
                     android:layout_width="match_parent"
                     android:layout_height="22dp"
                     android:layout_gravity="left|center_horizontal|center_vertical"
@@ -139,6 +143,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:layout_gravity="left|center_horizontal|center_vertical"
@@ -157,6 +162,7 @@
 
                 <TextView
                     android:id="@+id/settle_common_pay"
+                    android:fontFamily="@font/nanumsquarebold"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="right"
@@ -184,6 +190,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:layout_gravity="left|center_horizontal|center_vertical"
@@ -202,6 +209,7 @@
 
                 <TextView
                     android:id="@+id/settle_coupone_pay"
+                    android:fontFamily="@font/nanumsquarebold"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="right"
@@ -236,6 +244,7 @@
 
                 <TextView
                     android:id="@+id/settle_approve_info"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:layout_gravity="left|center_horizontal|center_vertical"
@@ -254,6 +263,7 @@
 
                 <TextView
                     android:id="@+id/settle_use_pay"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="right"
@@ -285,7 +295,8 @@
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
-                    android:layout_width="56dp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="예약 정보"
@@ -307,6 +318,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -323,6 +335,7 @@
 
                     <TextView
                         android:id="@+id/settle_reserve_time"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -346,6 +359,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -362,6 +376,7 @@
 
                     <TextView
                         android:id="@+id/settle_wash_address"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -385,6 +400,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -401,6 +417,7 @@
 
                     <TextView
                         android:id="@+id/settle_wash_agent"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -425,6 +442,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -441,6 +459,7 @@
 
                     <TextView
                         android:id="@+id/settle_car_info"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -463,6 +482,7 @@
 
                     <TextView
                         android:id="@+id/settle_car_number"
+                        android:fontFamily="@font/nanumsquareregular"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
