--- a/app/src/main/res/layout/activity_use_terms_5.xml
+++ b/app/src/main/res/layout/activity_use_terms_5.xml
@@ -56,6 +56,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:fontFamily="@font/nanumsquarebold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -66,6 +67,7 @@
                     android:letterSpacing="0.05" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -76,15 +78,18 @@
                     android:letterSpacing="0.05" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
                     android:text="@string/use_terms_text5_2"
                     android:textSize="14sp"
                     android:textColor="#3e3e3e"
-                    android:letterSpacing="0.05" />
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="4sp" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
@@ -94,24 +99,29 @@
                     android:letterSpacing="0.05" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
                     android:text="@string/use_terms_text5_4"
                     android:textSize="14sp"
                     android:textColor="#3e3e3e"
-                    android:letterSpacing="0.05" />
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="4sp" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
                     android:text="@string/use_terms_text5_5"
                     android:textSize="14sp"
                     android:textColor="#3e3e3e"
-                    android:letterSpacing="0.05" />
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="4sp" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
@@ -121,40 +131,48 @@
                     android:letterSpacing="0.05" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
                     android:text="@string/use_terms_text5_7"
                     android:textSize="14sp"
                     android:textColor="#3e3e3e"
-                    android:letterSpacing="0.05" />
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="4sp" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
                     android:text="@string/use_terms_text5_8"
                     android:textSize="14sp"
                     android:textColor="#3e3e3e"
-                    android:letterSpacing="0.05" />
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="4sp" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
                     android:text="@string/use_terms_text5_9"
                     android:textSize="14sp"
                     android:textColor="#3e3e3e"
-                    android:letterSpacing="0.05" />
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="4sp" />
 
                 <TextView
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical|center_horizontal"
                     android:text="@string/use_terms_text5_10"
                     android:textSize="14sp"
                     android:textColor="#3e3e3e"
-                    android:letterSpacing="0.05" />
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="4sp" />
             </LinearLayout>
 
 
