--- a/app/src/main/res/layout/car_list_item.xml
+++ b/app/src/main/res/layout/car_list_item.xml
@@ -29,14 +29,14 @@
                 android:gravity="left|center_horizontal|center_vertical">
                 <TextView
                     android:id="@+id/car_column1"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:layout_marginStart="16dp"
                     android:textColor="#3e3e3e"
                     android:textSize="18sp"
                     android:gravity="left|center_horizontal|center_vertical"
-                    android:text="포드"
-                    android:textStyle="bold"/>
+                    android:text="포드"/>
             </LinearLayout>
 
             <LinearLayout
@@ -48,6 +48,7 @@
 
                 <TextView
                     android:id="@+id/car_column2"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="17dp"
                     android:layout_marginStart="16dp"
@@ -66,6 +67,7 @@
 
                 <TextView
                     android:id="@+id/car_column3"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="17dp"
                     android:layout_marginStart="16dp"
