--- a/app/src/main/res/layout/coupone_list_item.xml
+++ b/app/src/main/res/layout/coupone_list_item.xml
@@ -17,17 +17,18 @@
 
         <TextView
             android:id="@+id/coupone_column1"
+            android:fontFamily="@font/nanumsquareextrabold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:text="2000원"
             android:textColor="#3e3e3e"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/coupone_column2"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
@@ -39,6 +40,7 @@
 
         <TextView
             android:id="@+id/coupone_column3"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
@@ -50,6 +52,7 @@
 
         <TextView
             android:id="@+id/coupone_column4"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
