--- a/app/src/main/res/layout/list_item_charge.xml
+++ b/app/src/main/res/layout/list_item_charge.xml
@@ -10,6 +10,7 @@
 
     <TextView
         android:id="@+id/charge_title"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
@@ -20,6 +21,7 @@
 
     <TextView
         android:id="@+id/charge_amount"
+        android:fontFamily="@font/nanumsquarebold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
