--- a/app/src/main/res/layout/list_item_option_service.xml
+++ b/app/src/main/res/layout/list_item_option_service.xml
@@ -32,6 +32,7 @@
 
             <TextView
                 android:id="@+id/option_name"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="13dp"
@@ -57,6 +58,7 @@
 
             <TextView
                 android:id="@+id/option_pay"
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="68dp"
