--- a/app/src/main/res/layout/list_item_point_history.xml
+++ b/app/src/main/res/layout/list_item_point_history.xml
@@ -13,6 +13,7 @@
 
         <TextView
             android:id="@+id/column1"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="#3e3e3e"
@@ -22,6 +23,7 @@
             android:text="@string/point_history_list_column_1"/>
         <TextView
             android:id="@+id/column2"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="#3e3e3e"
@@ -31,6 +33,7 @@
             android:text="@string/point_history_list_column_2"/>
         <TextView
             android:id="@+id/column3"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="#3e3e3e"
@@ -40,6 +43,7 @@
             android:text="@string/point_history_list_column_3"/>
         <TextView
             android:id="@+id/column4"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="#3e3e3e"
