--- a/app/src/main/res/layout/member_join_auth.xml
+++ b/app/src/main/res/layout/member_join_auth.xml
@@ -29,6 +29,29 @@
             android:src="@drawable/arrow_red_24_px" />
     </androidx.appcompat.widget.Toolbar>
 
+    <LinearLayout
+        android:id="@+id/auth_layout_text"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="40dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_activity">
+        <TextView
+            android:fontFamily="@font/nanumsquareregular"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/input_auth_msg"
+            android:textSize="15sp"
+            android:textColor="#3e3e3e"
+            android:letterSpacing="0.05" />
+    </LinearLayout>
+
     <!-- 인증 코드 입력 -->
     <LinearLayout
         android:id="@+id/auth_layout_phone"
@@ -57,6 +80,7 @@
 
         <EditText
             android:id="@+id/join_user_auth"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="216dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
@@ -66,7 +90,7 @@
             android:hint="@string/hint_auth_title"
             android:maxLength="20"
             android:textColor="#3E3E3E"
-            android:textSize="14sp"
+            android:textSize="15sp"
             android:inputType="number"
             android:imeOptions="actionDone" >
 
@@ -76,6 +100,7 @@
 
     <Button
         android:id="@+id/join_auth_btn"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="280dp"
         android:layout_height="52dp"
         android:layout_gravity="center"
@@ -108,6 +133,7 @@
 
         <TextView
             android:id="@+id/auth_time_counter"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="남은시간 2:00"
@@ -117,6 +143,7 @@
 
         <TextView
             android:id="@+id/auth_resend"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="재전송"
