--- a/app/src/main/res/layout/member_join_nickname.xml
+++ b/app/src/main/res/layout/member_join_nickname.xml
@@ -55,6 +55,7 @@
 
         <EditText
             android:id="@+id/nick_user_name"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="216dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
@@ -65,7 +66,7 @@
             android:inputType="text"
             android:maxLength="20"
             android:textColor="#3E3E3E"
-            android:textSize="14sp"
+            android:textSize="15sp"
             android:imeOptions="actionDone" >
 
             <requestFocus />
@@ -74,6 +75,7 @@
 
     <Button
         android:id="@+id/login_join_btn"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="280dp"
         android:layout_height="52dp"
         android:layout_gravity="center"
