--- a/app/src/main/res/layout/member_join_phone.xml
+++ b/app/src/main/res/layout/member_join_phone.xml
@@ -56,6 +56,7 @@
 
         <EditText
             android:id="@+id/join_user_phone"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="216dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
@@ -67,7 +68,7 @@
             android:digits="0123456789"
             android:maxLength="20"
             android:textColor="#3E3E3E"
-            android:textSize="14sp"
+            android:textSize="15sp"
             android:imeOptions="actionDone" >
 
             <requestFocus />
@@ -76,6 +77,7 @@
 
     <Button
         android:id="@+id/login_join_btn"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="280dp"
         android:layout_height="52dp"
         android:layout_gravity="center"
