--- a/app/src/main/res/layout/member_join_recom.xml
+++ b/app/src/main/res/layout/member_join_recom.xml
@@ -42,7 +42,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="38dp"
         android:gravity="center_horizontal"
         android:layout_marginStart="40dp"
         android:layout_marginTop="12dp"
@@ -50,12 +50,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal|center_vertical"
             android:text="@string/input_recom_msg"
             android:textColor="@color/textColorPrimary"
-            android:textSize="16dp" />
+            android:lineSpacingExtra="4sp"
+            android:textSize="15dp" />
     </LinearLayout>
 
     <!-- 실명 입력 -->
@@ -83,6 +85,7 @@
 
         <EditText
             android:id="@+id/recom_code"
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="216dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
@@ -94,7 +97,7 @@
             android:digits="0123456789"
             android:maxLength="20"
             android:textColor="#3E3E3E"
-            android:textSize="14sp"
+            android:textSize="15sp"
             android:imeOptions="actionDone" >
 
             <requestFocus />
@@ -103,6 +106,7 @@
 
     <Button
         android:id="@+id/recom_join_btn"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="280dp"
         android:layout_height="52dp"
         android:layout_gravity="center"
