--- a/app/src/main/res/layout/member_join_terms.xml
+++ b/app/src/main/res/layout/member_join_terms.xml
@@ -41,12 +41,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:fontFamily="@font/nanumsquareregular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="left|center_horizontal|center_vertical"
             android:text="@string/input_terms_msg"
             android:textColor="@color/textColorPrimary"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            android:lineSpacingExtra="2sp"/>
     </LinearLayout>
 
     <!-- 동의 -->
@@ -71,20 +73,20 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_span="2"
-                android:textStyle="bold"
                 android:button="@drawable/checkbox_selector_1"
                 android:layout_gravity="center|center_horizontal|center_vertical"
                 android:paddingLeft="20px" />
 
 
             <TextView
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="match_parent"
                 android:layout_height="18dp"
                 android:layout_marginLeft="10dp"
                 android:gravity="right"
                 android:text="전체 동의"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:letterSpacing="0.05"/>
+                android:textSize="15dp"/>
         </LinearLayout>
 
         <!-- 이용약관 동의 -->
@@ -108,6 +110,7 @@
 
             <TextView
                 android:layout_width="160dp"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:textColor="#3e3e3e"
@@ -120,6 +123,7 @@
 
             <TextView
                 android:id="@+id/terms_view_1"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="59dp"
@@ -152,6 +156,7 @@
 
             <TextView
                 android:layout_width="160dp"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:textColor="#3e3e3e"
@@ -164,6 +169,7 @@
 
             <TextView
                 android:id="@+id/terms_view_2"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="59dp"
@@ -195,6 +201,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
@@ -208,6 +215,7 @@
 
             <TextView
                 android:id="@+id/terms_view_3"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="59dp"
@@ -239,6 +247,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
@@ -252,6 +261,7 @@
 
             <TextView
                 android:id="@+id/terms_view_4"
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="59dp"
@@ -266,6 +276,7 @@
 
     <Button
         android:id="@+id/terms_join_btn"
+        android:fontFamily="@font/nanumsquareregular"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_gravity="center"
