--- a/app/src/main/res/layout/select_car_dialog.xml
+++ b/app/src/main/res/layout/select_car_dialog.xml
@@ -22,6 +22,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:fontFamily="@font/nanumsquareregular"
                 android:layout_width="78dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
@@ -30,7 +31,7 @@
                 android:background="@drawable/layout_background"
                 android:text="모델명"
                 android:textColor="#3E3E3E"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
 
             <GridView
                 android:id="@+id/car_gridView1"
