--- a/app/src/main/res/layout/use_list_item.xml
+++ b/app/src/main/res/layout/use_list_item.xml
@@ -26,6 +26,7 @@
 
             <TextView
                 android:id="@+id/use_column1"
+                android:fontFamily="@font/nanumsquarebold"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:gravity="left|center_horizontal|center_vertical"
@@ -51,6 +52,7 @@
 
                 <TextView
                     android:id="@+id/use_column2"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="56dp"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
@@ -67,6 +69,7 @@
 
                 <TextView
                     android:id="@+id/use_column3"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
@@ -93,6 +96,7 @@
 
                 <TextView
                     android:id="@+id/use_column4"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="56dp"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
@@ -109,6 +113,7 @@
 
                 <TextView
                     android:id="@+id/use_column5"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
@@ -135,6 +140,7 @@
 
                 <TextView
                     android:id="@+id/use_column6"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="56dp"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
@@ -151,6 +157,7 @@
 
                 <TextView
                     android:id="@+id/use_column7"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
@@ -167,6 +174,7 @@
 
                 <TextView
                     android:id="@+id/use_column8"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="center|center_horizontal|center_vertical"
@@ -193,6 +201,7 @@
 
                 <TextView
                     android:id="@+id/use_column9"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="56dp"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
@@ -225,6 +234,7 @@
 
                 <TextView
                     android:id="@+id/use_column10"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
